// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PaginatedList renders the correct HTML 1`] = `
<div
  className="container"
>
  <div
    className="controls_container"
  >
    <button
      className="controls_leftButton"
      disabled={true}
      onClick={[Function]}
    >
      &lt;
    </button>
    <span
      className="controls_pageText"
    >
      Page 
      1
       of 
      2
    </span>
    <button
      className="controls_rightButton"
      disabled={false}
      onClick={[Function]}
    >
      &gt;
    </button>
  </div>
  <MockComponent
    className="children"
    id={1}
    key="1"
  />
  <MockComponent
    className="children"
    id={2}
    key="2"
  />
  <MockComponent
    className="children"
    id={3}
    key="3"
  />
</div>
`;

exports[`PaginatedList renders the correct HTML when no class names are provided 1`] = `
<div>
  <div>
    <button
      disabled={true}
      onClick={[Function]}
    >
      &lt;
    </button>
    <span>
      Page 
      1
       of 
      2
    </span>
    <button
      disabled={false}
      onClick={[Function]}
    >
      &gt;
    </button>
  </div>
  <MockComponent
    id={1}
    key="1"
  />
  <MockComponent
    id={2}
    key="2"
  />
  <MockComponent
    id={3}
    key="3"
  />
</div>
`;

exports[`PaginatedList when the left button is clicked renders the previous page 1`] = `
<div
  className="container"
>
  <div
    className="controls_container"
  >
    <button
      className="controls_leftButton"
      disabled={true}
      onClick={[Function]}
    >
      &lt;
    </button>
    <span
      className="controls_pageText"
    >
      Page 
      1
       of 
      2
    </span>
    <button
      className="controls_rightButton"
      disabled={false}
      onClick={[Function]}
    >
      &gt;
    </button>
  </div>
  <MockComponent
    className="children"
    id={1}
    key="1"
  />
  <MockComponent
    className="children"
    id={2}
    key="2"
  />
  <MockComponent
    className="children"
    id={3}
    key="3"
  />
</div>
`;

exports[`PaginatedList when the right button is clicked renders the next page 1`] = `
<div
  className="container"
>
  <div
    className="controls_container"
  >
    <button
      className="controls_leftButton"
      disabled={false}
      onClick={[Function]}
    >
      &lt;
    </button>
    <span
      className="controls_pageText"
    >
      Page 
      2
       of 
      2
    </span>
    <button
      className="controls_rightButton"
      disabled={true}
      onClick={[Function]}
    >
      &gt;
    </button>
  </div>
  <MockComponent
    className="children"
    id={4}
    key="4"
  />
</div>
`;
